--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/stanislavsavolainen/digi3#readme",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "eslint": "^4.1.1",
     "express": "^4.15.3"
   }
 }
